# wezpy

./: .gitignore  Cargo.toml  flake.nix  pyproject.toml  test.py
src/: lib.rs
