[package]
name = "wezpy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "wezpy"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.20", features = ["extension-module"] }
pyo3-asyncio = { version = "0.20", features = ["async-std-runtime"] }
async-std = "1.9"
termwiz = {git = "https://github.com/wez/wezterm.git", rev = "5046fc225992db6ba2ef8812743fadfdfe4b184a"}
wezterm-client = { git = "https://github.com/wez/wezterm.git" , rev = "5046fc225992db6ba2ef8812743fadfdfe4b184a" }
wezterm-gui-subcommands = { git = "https://github.com/wez/wezterm.git" , rev = "5046fc225992db6ba2ef8812743fadfdfe4b184a" }
mux = { git = "https://github.com/wez/wezterm.git" , rev = "5046fc225992db6ba2ef8812743fadfdfe4b184a" }
codec = { git = "https://github.com/wez/wezterm.git" , rev = "5046fc225992db6ba2ef8812743fadfdfe4b184a" }
wezterm-input-types = { git = "https://github.com/wez/wezterm.git" , rev = "5046fc225992db6ba2ef8812743fadfdfe4b184a" }
# wezterm = {path = "wezyterm/wezterm" }

chrono = "=0.4.38"
anyhow = "1.0.95"
regex = "=1.11.1"
futures = "=0.3.31"
